--- a/index.html
+++ b/index.html
@@ -62,18 +62,7 @@
 									<br>Welcome to My Portfolio!
 		
 								</h2>
-								<p>My name is Jinxiang Ma and I am currently a college student at University of Califoria, Santa Barbara currently pursuing a dual degree in data science and mathematics.
-									Throughout my time at UCSB, I have gained a strong foundation in mathmatics and have completed a variety of course and projects related to data analysis and machine learning.
-									In my current role as a research assistant at the Social Perception Lab, I have had the research oppotunity to work on projects involving sentiment analysis and have developed skill in natural language processing
-
-								   In addition to my coursework and research experience, I am also a student intern at San Francisco Public Utilities Commission, where I have gained heads-on exprience working with large datasets from infrastructure projects. 
-								   As I look to the future, I am excited to continue learning and growing as a data engineer/data scientist and hope to utilize my data science skill to make a positive impact in our society. 
-								   
-								   Thank you for visiting my portfolio website. I hope you enjoy exploring my past projects and learning more about my experience and skills. Please don't hasitate to reach out if you have any questions or would like to connect.
-
-								   Best Regards, 
-								   Jinxiang Ma
-								</p>
+								
 							</header>
 
 
@@ -156,10 +145,21 @@
 
 							<a href="#" class="image"><img src="images/Jinxiang.jpg" alt="A Selfie of Jinxiang" width="200" height="400"/></a>
 
-							<p>Diligent College Student with an aptitude for mathematics and data science.
-								Bringing forth a motivated attitude and a variety of powerful skills.
-								Experienced in C++, Python, and R programming. Excited to work for a
-								data-related job and gain real-world experience. </p>
+							<p>My name is Jinxiang Ma and I am currently a college student at University of Califoria, Santa Barbara currently pursuing a dual degree in data science and mathematics.
+								Throughout my time at UCSB, I have gained a strong foundation in mathmatics and have completed a variety of course and projects related to data analysis and machine learning.
+								In my current role as a research assistant at the Social Perception Lab, I have had the research oppotunity to work on projects involving sentiment analysis and have developed skill in natural language processing
+							</p>
+							<p>
+							   In addition to my coursework and research experience, I am also a student intern at San Francisco Public Utilities Commission, where I have gained heads-on exprience working with large datasets from infrastructure projects. 
+							   As I look to the future, I am excited to continue learning and growing as a data engineer/data scientist and hope to utilize my data science skill to make a positive impact in our society. 
+							</p>
+							<p>
+							   Thank you for visiting my portfolio website. I hope you enjoy exploring my past projects and learning more about my experience and skills. Please don't hasitate to reach out if you have any questions or would like to connect.
+							</p>
+							<p>
+							   Best Regards, <br>
+							   Jinxiang Ma
+							</p>
 
 						</div>
 					</section>
