--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image"><img src="images/Jinxiang.jpg" alt="A Selfie of Jinxiang" width="200" height="400"/></a>
+							<a href="#" class="image left"><img src="images/Jinxiang.jpg" alt="A Selfie of Jinxiang" width="200" height="400"/></a>
 
 							<p>My name is Jinxiang Ma and I am currently a college student at University of Califoria, Santa Barbara currently pursuing a dual degree in data science and mathematics.
 								Throughout my time at UCSB, I have gained a strong foundation in mathmatics and have completed a variety of course and projects related to data analysis and machine learning.
