--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 									<article class="item">
 										<a href="Project_3.html" class="image fit"><img src="images/Project_3.png" alt="" /></a>
 										<header>
-											<h3>Azure Speech to Text Transcription</h3>
+											<h3>Multilingual Audio Transcription with Azure Speech to Text SDK</h3>
 										</header>
 									</article>
 									<article class="item">
@@ -125,9 +125,11 @@
 									<article class="item">
 										<a href="Project_6.html" class="image fit"><img src="images/Project_6.jpg" alt="" /></a>
 										<header>
-											<h3>Survival Prediction on Titanic Dataset</h3>
+											<h3>Navigating Interest Rate Risk</h3>
 										</header>
 									</article>
+
+
 								</div>
 								
 							</div>
@@ -145,18 +147,18 @@
 
 							<a href="#" class="image left"><img src="images/Jinxiang.jpg" alt="A Selfie of Jinxiang" width="200" height="400"/></a>
 
-							<p>My name is Jinxiang Ma and I am currently a college student at University of Califoria, Santa Barbara currently pursuing a dual degree in data science and mathematics.
+							<p class = "left">My name is Jinxiang Ma and I am currently a college student at University of Califoria, Santa Barbara currently pursuing a dual degree in data science and mathematics.
 								Throughout my time at UCSB, I have gained a strong foundation in mathmatics and have completed a variety of course and projects related to data analysis and machine learning.
 								In my current role as a research assistant at the Social Perception Lab, I have had the research oppotunity to work on projects involving sentiment analysis and have developed skill in natural language processing
 							</p>
-							<p>
+							<p class = "left">
 							   In addition to my coursework and research experience, I am also a student intern at San Francisco Public Utilities Commission, where I have gained heads-on exprience working with large datasets from infrastructure projects. 
-							   As I look to the future, I am excited to continue learning and growing as a data engineer/data scientist and hope to utilize my data science skill to make a positive impact in our society. 
+							   As I look to the future, I am excited to continue learning and growing as a data science professional and hope to utilize my data science skill to make a positive impact in our society. 
 							</p>
-							<p>
+							<p class = "left">
 							   Thank you for visiting my portfolio website. I hope you enjoy exploring my past projects and learning more about my experience and skills. Please don't hasitate to reach out if you have any questions or would like to connect.
 							</p>
-							<p>
+							<p class = "left">
 							   Best Regards, <br>
 							   Jinxiang Ma
 							</p>
