--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#skill" id="skill-link"><span class="icon solid fa-diagram-project">Skill Tree</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -147,12 +146,12 @@
 
 							<a href="#" class="image left"><img src="images/Jinxiang.jpg" alt="A Selfie of Jinxiang" width="200" height="400"/></a>
 
-							<p class = "left">My name is Jinxiang Ma and I am currently a college student at University of Califoria, Santa Barbara currently pursuing a dual degree in data science and mathematics.
+							<p class = "left">My name is Jinxiang Ma. I am currently a college student at University of Califoria, Santa Barbara, pursuing a dual degree in data science and mathematics.
 								Throughout my time at UCSB, I have gained a strong foundation in mathmatics and have completed a variety of course and projects related to data analysis and machine learning.
 								In my current role as a research assistant at the Social Perception Lab, I have had the research oppotunity to work on projects involving sentiment analysis and have developed skill in natural language processing
 							</p>
 							<p class = "left">
-							   In addition to my coursework and research experience, I am also a student intern at San Francisco Public Utilities Commission, where I have gained heads-on exprience working with large datasets from infrastructure projects. 
+							   In addition to my coursework and research experience, I am also a student intern at San Francisco Public Utilities Commission, where I have gained heads-on experience working with large datasets from infrastructure projects. 
 							   As I look to the future, I am excited to continue learning and growing as a data science professional and hope to utilize my data science skill to make a positive impact in our society. 
 							</p>
 							<p class = "left">
