--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<p>A snapshot of my previous projects </p>
 
 							<div class="row">
-								<div class="col-4 col-4">
+								<div class="col-4">
 									<article class="item">
 										<a href="Project_1.html" class="image fit"><img src="images/Project_1.jpg" alt="" /></a>
 										<header>
@@ -100,7 +100,7 @@
 									</article>
 								</div>
 								
-								<div class="col-4 col-4">
+								<div class="col-4">
 									<article class="item">
 										<a href="Project_3.html" class="image fit"><img src="images/Project_3.png" alt="" /></a>
 										<header>
@@ -114,7 +114,7 @@
 										</header>
 									</article>
 								</div>
-								<div class="col-4 col-4">
+								<div class="col-4">
 									<article class="item">
 										<a href="Project_5.html" class="image fit"><img src="images/Project_5.jpg" alt="" /></a>
 										<header>
