--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<p>A snapshot of my previous projects </p>
 
 							<div class="row">
-								<div class="col-4 col-12-mobile">
+								<div class="col-4">
 									<article class="item">
 										<a href="Project_1.html" class="image fit"><img src="images/Project_1.jpg" alt="" /></a>
 										<header>
