--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<p>A snapshot of my previous projects </p>
 
 							<div class="row">
-								<div class="col-4">
+								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="Project_1.html" class="image fit"><img src="images/Project_1.jpg" alt="" /></a>
 										<header>
@@ -94,7 +94,7 @@
 									</article>
 								</div>
 
-								<div class="col-4">
+								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="Project_2.html" class="image fit"><img src="images/Project_2.jpg" alt="" /></a>
 										<header>
@@ -103,7 +103,7 @@
 									</article>
 								</div>
 
-								<div class="col-4">
+								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="Project_3.html" class="image fit"><img src="images/Project_3.png" alt="" /></a>
 										<header>
@@ -112,7 +112,7 @@
 									</article>
 								</div>
 
-								<div class="col-4">
+								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="Project_4.html" class="image fit"><img src="images/Project_4.jpg" alt="" /></a>
 										<header>
@@ -121,7 +121,7 @@
 									</article>
 								</div>
 
-								<div class="col-4">
+								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="Project_5.html" class="image fit"><img src="images/Project_5.jpg" alt="" /></a>
 										<header>
@@ -130,7 +130,7 @@
 									</article>
 								</div>
 
-								<div class="col-4">
+								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="Project_6.html" class="image fit"><img src="images/Project_6.jpg" alt="" /></a>
 										<header>
