--- a/Project_1.html
+++ b/Project_1.html
@@ -24,19 +24,19 @@
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 							<h1><i class="fa-solid fa-laptop-code"></i>  Technologies used: Jupyter Notebook, Python(Altair, Numpy, Pandas, Seaborn)</li>
 							</h1>
-								Perform Simple Linear Regression and Multiple Linear Regression on college
-								enrollment data to determine if any factors affect the number of college
-								students, by calculating the goodness of fit using R-square and utilizing
-								heatmap to detect multicollinearity between different factors</p>
+							Performed Simple Linear Regression and Multiple Linear Regression on college enrollment data to determine if any factors affect
+							the number of college students, by calculating the goodness of fit using R-square and utilizing heat-map to detect
+							multicollinearity between different factors. (</p>
+							<div class="columns">
+								<ul class="actions">
+									<a href="https://github.com/Jinxiang2000/NCDS-Data-Analysis/blob/main/PSTAT%20100%20project.pdf" class="button icon solid fa-file"> Learn more</a>
+								</ul>
 
-                            <ul class="actions">
-                                <a href="https://github.com/Jinxiang2000/NCDS-Data-Analysis/blob/main/PSTAT%20100%20project.pdf" class="button icon solid fa-file"> Learn more</a>
-                            </ul>
-
-                            <ul class="actions">
-                                <a href="index.html" class="button icon solid fa-arrow-rotate-left"> Return</a>
-                            </ul>
-						</div>
+								<ul class="actions">
+									<a href="index.html" class="button icon solid fa-arrow-rotate-left"> Return</a>
+								</ul>
+							</div>
+					    </div>
 					</section>
 				
 				
