--- a/Project_1.html
+++ b/Project_1.html
@@ -26,7 +26,7 @@
 							</h1>
 							Performed Simple Linear Regression and Multiple Linear Regression on college enrollment data to determine if any factors affect
 							the number of college students, by calculating the goodness of fit using R-square and utilizing heat-map to detect
-							multicollinearity between different factors. (</p>
+							multicollinearity between different factors. </p>
 							
 								
 								<ul class="actions">
