--- a/Project_4.html
+++ b/Project_4.html
@@ -21,12 +21,9 @@
 
 							<a href="index.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>Case studies of profitability in different business scenarios. Identified the
+								constraints and construct Linear Programming models for each scenario. Analyzed supply chain base on Lingo
+								Solution Report and Sensitivity Report, and provide insight on how to allocate resources to maximize profitability</p>
 
                             <ul class="actions">
                                 <a href="#" class="button icon solid fa-file"> Learn more</a>
