--- a/index.html
+++ b/index.html
@@ -139,7 +139,23 @@
 									</article>
 								</div>
 
-								
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="Project_7.html" class="image fit"><img src="images/Project_6.jpg" alt="" /></a>
+										<header>
+											<h3>Dianping Business Scrape</h3>
+										</header>
+									</article>
+								</div>
+
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="Project_8.html" class="image fit"><img src="images/Project_6.jpg" alt="" /></a>
+										<header>
+											<h3>Time Series Forecasting on SFO Air Passenger Statistics</h3>
+										</header>
+									</article>
+								</div>
 								
 							</div>
 
