--- a/Project_2.html
+++ b/Project_2.html
@@ -31,13 +31,17 @@
 								Computed the AUC rate to measure the performance of each classification
 								method.</p>
 
-                            <ul class="actions">
-                                <a href="https://github.com/Jinxiang2000/ML-project-US-county-data/blob/main/Project.pdf" class="button icon solid fa-file"> Learn more</a>
-                            </ul>
-
-                            <ul class="actions">
-                                <a href="index.html" class="button icon solid fa-arrow-rotate-left"> Return</a>
-                            </ul>
+								<div class="row">
+									<div class="col-6 col-12-mobile">
+										<ul class="actions">
+											<a href="#" class="button icon solid fa-file"> Learn more</a>
+										</ul>
+									</div>
+									<div class="col-6 col-12-mobile">
+										<ul class="actions">
+											<a href="index.html" class="button icon solid fa-arrow-rotate-left"> Return</a>
+										</ul>
+								</div>
 						</div>
 					</section>
 				
