--- a/Project_4.html
+++ b/Project_4.html
@@ -25,13 +25,17 @@
 								constraints and construct Linear Programming models for each scenario. Analyzed supply chain base on Lingo
 								Solution Report and Sensitivity Report, and provide insight on how to allocate resources to maximize profitability</p>
 
-                            <ul class="actions">
-                                <a href="#" class="button icon solid fa-file"> Learn more</a>
-                            </ul>
-
-                            <ul class="actions">
-                                <a href="index.html" class="button icon solid fa-arrow-rotate-left"> Return</a>
-                            </ul>
+								<div class="row">
+									<div class="col-6 col-12-mobile">
+										<ul class="actions">
+											<a href="#" class="button icon solid fa-file"> Learn more</a>
+										</ul>
+									</div>
+									<div class="col-6 col-12-mobile">
+										<ul class="actions">
+											<a href="index.html" class="button icon solid fa-arrow-rotate-left"> Return</a>
+										</ul>
+								</div>
 						</div>
 					</section>
 				
