--- a/Project_8.html
+++ b/Project_8.html
@@ -29,13 +29,17 @@
 							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
 							ornare iaculis.</p>
 
-                            <ul class="actions">
-                                <a href="#" class="button icon solid fa-file"> Learn more</a>
-                            </ul>
-
-                            <ul class="actions">
-                                <a href="index.html" class="button icon solid fa-arrow-rotate-left"> Return</a>
-                            </ul>
+                            <div class="row">
+                                <div class="col-6 col-12-mobile">
+                                    <ul class="actions">
+                                        <a href="#" class="button icon solid fa-file"> Learn more</a>
+                                    </ul>
+                                </div>
+                                <div class="col-6 col-12-mobile">
+                                    <ul class="actions">
+                                        <a href="index.html" class="button icon solid fa-arrow-rotate-left"> Return</a>
+                                    </ul>
+                            </div>
 						</div>
 					</section>
 				
