--- a/Project_5.html
+++ b/Project_5.html
@@ -21,7 +21,7 @@
 
 							<a href="index.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Case studies of profitability in different business scenarios. Identified the
+							<p>Case studies of profitability in Automobile Assembly. Identified the
 								constraints and construct Linear Programming models for each scenario. Analyzed supply chain base on Lingo
 								Solution Report and Sensitivity Report, and provide insight on how to allocate resources to maximize profitability</p>
 
