--- a/Project_7.html
+++ b/Project_7.html
@@ -12,22 +12,20 @@
     
 		
 
-				<!-- Survival Prediction on Titanic Dataset -->
+				<!-- Dianping Business Scrape -->
 					<section id="Project 7" class="one">
 						<div class="container">
 
 							<header>
-								<h2>Survival Prediction on Titanic Dataset</h2>
+								<h2>Dianping Business Scrape</h2>
 							</header>
 
 							<a href="index.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>Scraped Children’s Libraries information in China from DianPing.com
+                                (the Chinese equivalent of Yelp) with HTTP requests and sessions, extracted website cookies using selenium webdriver and bypassed Captcha with a modified request header. Retrieved a list of children’s libraries in over 2000
+                                Chinese cities with the URL of their respective web pages. Parsed HTML code iteratively into BeautifulSoup object,
+                                located and scraped relevant information with XPath, and exported the final result into CSV files.</p>
                             <div class="row">
                                 <div class="col-6 col-12-mobile">
                                     <ul class="actions">
