--- a/Project_8.html
+++ b/Project_8.html
@@ -12,12 +12,12 @@
     
 		
 
-				<!-- Survival Prediction on Titanic Dataset -->
+				<!-- Time Series Forecasting on SFO Air Passenger Statistics -->
 					<section id="Project 8" class="one">
 						<div class="container">
 
 							<header>
-								<h2>Survival Prediction on Titanic Dataset</h2>
+								<h2>Time Series Forecasting on SFO Air Passenger Statistics</h2>
 							</header>
 
 							<a href="index.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
