--- a/Project_3.html
+++ b/Project_3.html
@@ -21,12 +21,10 @@
 
 							<a href="index.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>Performed Batch Transcription using REST API. Implemented JavaScript code to generate blob URLs for audio files. Customized
+								continuous recognition with language detection and speaker diarization features to generate transcription for bilingual
+								audio. Trained and tuned custom speech model in Azure Speech Studio, yielding a new model that has a lower word
+								error rate(WER) compared to the original model.</p>
 
                             <div class="row">
                                 <div class="col-6 col-12-mobile">
