--- a/Project_8.html
+++ b/Project_8.html
@@ -39,6 +39,7 @@
                                     <ul class="actions">
                                         <a href="index.html" class="button icon solid fa-arrow-rotate-left"> Return</a>
                                     </ul>
+                                </div>
                             </div>
 						</div>
 					</section>
