--- a/Project_5.html
+++ b/Project_5.html
@@ -28,7 +28,7 @@
 								<div class="row">
 									<div class="col-6 col-12-mobile">
 										<ul class="actions">
-											<a href="#" class="button icon solid fa-file"> Learn more</a>
+											<a href="https://github.com/Jinxiang2000/Linear-Programming/blob/d93e2907864d8908c8066b2797f13351184f8482/Profit%20Optimization%20for%20auto%20assembly.pdf" class="button icon solid fa-file"> Learn more</a>
 										</ul>
 									</div>
 									<div class="col-6 col-12-mobile">
