--- a/Project_6.html
+++ b/Project_6.html
@@ -28,7 +28,7 @@
                             <div class="row">
                                 <div class="col-6 col-12-mobile">
                                     <ul class="actions">
-                                        <a href="#" class="button icon solid fa-file"> Learn more</a>
+                                        <a href="https://github.com/Jinxiang2000/PSTAT194FM/blob/0a000f1a0e7dde1ce79874a9dd4971a7a973c7ef/Project_3_New.pdf" class="button icon solid fa-file"> Learn more</a>
                                     </ul>
                                 </div>
                                 <div class="col-6 col-12-mobile">
