--- a/Project_2.html
+++ b/Project_2.html
@@ -34,7 +34,7 @@
 								<div class="row">
 									<div class="col-6 col-12-mobile">
 										<ul class="actions">
-											<a href="#" class="button icon solid fa-file"> Learn more</a>
+											<a href="https://github.com/Jinxiang2000/ML-project-US-county-data/blob/d064765d3bc05a3aea4e7dab38ef3b2c06f6e9ac/Project.pdf" class="button icon solid fa-file"> Learn more</a>
 										</ul>
 									</div>
 									<div class="col-6 col-12-mobile">
