--- a/Project_4.html
+++ b/Project_4.html
@@ -28,7 +28,7 @@
 								<div class="row">
 									<div class="col-6 col-12-mobile">
 										<ul class="actions">
-											<a href="#" class="button icon solid fa-file"> Learn more</a>
+											<a href="https://github.com/Jinxiang2000/Crafting-S.L.-market-expansion/blob/b1524bb9731c8758cfbab1a53177ec9aecc16c9b/Crafting%20S.L.%20market%20expansion.pdf" class="button icon solid fa-file"> Learn more</a>
 										</ul>
 									</div>
 									<div class="col-6 col-12-mobile">
