--- a/Project_7.html
+++ b/Project_7.html
@@ -29,7 +29,7 @@
                             <div class="row">
                                 <div class="col-6 col-12-mobile">
                                     <ul class="actions">
-                                        <a href="#" class="button icon solid fa-file"> Learn more</a>
+                                        <a href="https://github.com/ucsb-dreamlab/dianpingBusinessScrape/blob/master/Scrape_unique_URL.ipynb" class="button icon solid fa-file"> Learn more</a>
                                     </ul>
                                 </div>
                                 <div class="col-6 col-12-mobile">
