--- a/Project_8.html
+++ b/Project_8.html
@@ -22,18 +22,18 @@
 
 							<a href="index.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Perfromed Time series analysis on the passenger data of San Francisco International Airport(SFO)
+							<p>Performed Time series analysis on the passenger data of San Francisco International Airport(SFO)
                                 from 2005 to 2019. I analyzed the historical air passenger data and build a SARIMA model to 
                                 forcast 12 month period in future.
                             </p>
 
                             <div class="row">
-                                <div class="col-2 col-12-mobile">
+                                <div class="col-3 col-12-mobile">
                                     <ul class="actions">
                                         <a href="https://github.com/Jinxiang2000/PSTAT-174-Time-Series/blob/main/Jinxiang%20Ma%20-%20174%20final%20project.pdf" class="button icon solid fa-file"> Learn more</a>
                                     </ul>
                                 </div>
-                                <div class="col-2 col-12-mobile">
+                                <div class="col-3 col-12-mobile">
                                     <ul class="actions">
                                         <a href="index.html" class="button icon solid fa-arrow-rotate-left"> Return</a>
                                     </ul>
