--- a/index.html
+++ b/index.html
@@ -188,9 +188,18 @@
 							   Jinxiang Ma
 							</p>
 
-							<p class="actions">
-								<a href="Skill_tree.html" class="button icon solid fa-diagram-project">Skill Tree</a>
-							</p>
+							<div class="row">
+                                <div class="col-6 col-12-mobile">
+                                    <p class="actions">
+										<a href="Skill_tree.html" class="button icon solid fa-diagram-project">Skill Tree</a>
+									</p>
+                                </div>
+                                <div class="col-6 col-12-mobile">
+                                    <p class="actions">
+										<a href="https://github.com/Jinxiang2000/Resume/blob/main/Resume___Jinxiang_Ma.pdf" class="button icon solid fa-diagram-project">Resume</a>
+									</p>
+                            </div>
+							
 
 
 						</div>
