--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
                                     <p class="actions">
 										<a href="https://github.com/Jinxiang2000/Resume/blob/main/Resume___Jinxiang_Ma.pdf" class="button icon solid fa-diagram-project">Resume</a>
 									</p>
+								</div>
                             </div>
 							
 
