--- a/Project_1.html
+++ b/Project_1.html
@@ -21,7 +21,7 @@
                                     U.S. Schools.</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/Project_1.jpg" alt="" /></a>
 							<h1><i class="fa-solid fa-laptop-code"></i>  Technologies used: Jupyter Notebook, Python(Altair, Numpy, Pandas, Seaborn)</li>
 							</h1>
 							Performed Simple Linear Regression and Multiple Linear Regression on college enrollment data to determine if any factors affect
@@ -32,7 +32,7 @@
 							<div class="row">
                                 <div class="col-6 col-12-mobile">
                                     <ul class="actions">
-                                        <a href="#" class="button icon solid fa-file"> Learn more</a>
+                                        <a href="https://github.com/Jinxiang2000/NCDS-Data-Analysis/blob/096a1423ac90f1259e2fb683e877afe352185e57/PSTAT%20100%20project.pdf" class="button icon solid fa-file"> Learn more</a>
                                     </ul>
                                 </div>
                                 <div class="col-6 col-12-mobile">
