--- a/Project_1.html
+++ b/Project_1.html
@@ -24,7 +24,7 @@
 							<a href="#" class="image featured"><img src="images/Project_1.jpg" alt="" /></a>
 							<h1><i class="fa-solid fa-laptop-code"></i>  Technologies used: Jupyter Notebook, Python(Altair, Numpy, Pandas, Seaborn)</li>
 							</h1>
-							Performed Simple Linear Regression and Multiple Linear Regression on college enrollment data to determine if any factors affect
+							<p>Performed Simple Linear Regression and Multiple Linear Regression on college enrollment data to determine if any factors affect
 							the number of college students, by calculating the goodness of fit using R-square and utilizing heat-map to detect
 							multicollinearity between different factors. </p>
 							
