--- a/Project_2.html
+++ b/Project_2.html
@@ -19,7 +19,7 @@
 								<h2>Poverty Prediction with Census and Education Data</h2>
 							</header>
 
-							<a href="index.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="index.html" class="image featured"><img src="images/Project_2.jpg" alt="" /></a>
 							<h1>
 								<i class="fa-solid fa-laptop-code"></i>Technologies used:R (ggplot, ROCR, ggridges, dplyr, glmnet, tree,
 								randomForest,denextend)
