--- a/Project_3.html
+++ b/Project_3.html
@@ -19,7 +19,7 @@
 								<h2>Azure Speech to Text Transcription</h2>
 							</header>
 
-							<a href="index.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="index.html" class="image featured"><img src="images/Project_3.png" alt="" /></a>
 
 							<p>Performed Batch Transcription using REST API. Implemented JavaScript code to generate blob URLs for audio files. Customized
 								continuous recognition with language detection and speaker diarization features to generate transcription for bilingual
