--- a/Project_4.html
+++ b/Project_4.html
@@ -19,7 +19,7 @@
 								<h2>Crafting S.L. market expansion</h2>
 							</header>
 
-							<a href="index.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="index.html" class="image featured"><img src="images/Project_4.jpg" alt="" /></a>
 
 							<p>Case studies of profitability in different business scenarios. Identified the
 								constraints and construct Linear Programming models for each scenario. Analyzed supply chain base on Lingo
