--- a/Project_6.html
+++ b/Project_6.html
@@ -20,7 +20,7 @@
 								<h2>Navigating Interest Rate Risk</h2>
 							</header>
 
-							<a href="index.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="index.html" class="image featured"><img src="images/Project_6.jpg" alt="" /></a>
 
 							<p>Analyzed historical bond return data and simulate the possible outcome of Treasury
 								bonds using the ESG model. Delivered recommendations on portfolio allocation for different investment horizons.</p>
