--- a/Project_7.html
+++ b/Project_7.html
@@ -20,7 +20,7 @@
 								<h2>Dianping Business Scrape</h2>
 							</header>
 
-							<a href="index.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="index.html" class="image featured"><img src="images/Project_7.jpg" alt="" /></a>
 
 							<p>Scraped Children’s Libraries information in China from DianPing.com
                                 (the Chinese equivalent of Yelp) with HTTP requests and sessions, extracted website cookies using selenium webdriver and bypassed Captcha with a modified request header. Retrieved a list of children’s libraries in over 2000
