--- a/Project_8.html
+++ b/Project_8.html
@@ -20,7 +20,7 @@
 								<h2>Time Series Forecasting on SFO Air Passenger Statistics</h2>
 							</header>
 
-							<a href="index.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="index.html" class="image featured"><img src="images/Project_8.jpg" alt="" /></a>
 
 							<p>Performed Time series analysis on the passenger data of San Francisco International Airport(SFO)
                                 from 2005 to 2019. I analyzed the historical air passenger data and build a SARIMA model to 
