--- a/Project_5.html
+++ b/Project_5.html
@@ -19,7 +19,7 @@
 								<h2>Profit Optimization for Auto Assembly</h2>
 							</header>
 
-							<a href="index.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="index.html" class="image featured"><img src="images/Project_5.jpg" alt="" /></a>
 
 							<p>Case studies of profitability in Automobile Assembly. Identified the
 								constraints and construct Linear Programming models for each scenario. Analyzed supply chain base on Lingo
