--- a/Project_2.html
+++ b/Project_2.html
@@ -41,6 +41,7 @@
 										<ul class="actions">
 											<a href="index.html" class="button icon solid fa-arrow-rotate-left"> Return</a>
 										</ul>
+									</div>
 								</div>
 						</div>
 					</section>
