--- a/Project_6.html
+++ b/Project_6.html
@@ -35,6 +35,7 @@
                                     <ul class="actions">
                                         <a href="index.html" class="button icon solid fa-arrow-rotate-left"> Return</a>
                                     </ul>
+								</div>	
                             </div>
 						</div>
 					</section>
