--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="Project_6.html" class="image fit"><img src="images/Project_6.jpg" alt="" /></a>
+										<a href="Project_6.html" class="image fit"><img src="images/Project_6_new.jpg" alt="" /></a>
 										<header>
 											<h3>Navigating Interest Rate Risk</h3>
 										</header>
@@ -243,7 +243,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Jinxiang. All rights reserved.</li><li><a href="majinxiang2000@gmail.com">Email</a></li>
+						<li>&copy; Jinxiang. All rights reserved.</li><li><a href="mailto:majinxiang2000@gmail.com">Email</a></li>
 					</ul>
 
 			</div>
