--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
 							
 
-							<form method="POST" action="https://formsubmit.co/f6501c53a901c2856cdf09b436229265" enctype="text/plain">
+							<form method="POST" action="mailto:majinxiang2000@gmail.com" enctype="text/plain">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
