--- a/Project_1.html
+++ b/Project_1.html
@@ -13,7 +13,7 @@
 
 				<!-- Understanding critical factors of Minority and Transferred Students in the
 												U.S. Schools. -->
-					<section id="about" class="one">
+					<section id="about" class="three">
 						<div class="container">
 
 							<header>
