--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.instagram.com/j1nx14n6/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-weixin"><span class="label">Wechat</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/Jinxiang2000" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.kaggle.com/jinxiangma" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
+							<li><a href="https://www.linkedin.com/in/jinxiang-ma-806a621a8/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:majinxiang2000@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
