--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Jinxiang Ma</h1>
-							<p>Data Scientist</p>
+							<p>Student at UC Santa Barbara</p>
 						</div>
 
 					<!-- Nav -->
