--- a/index.html
+++ b/index.html
@@ -172,16 +172,13 @@
 
 							<a href="#" class="image left"><img src="images/Jinxiang.jpg" alt="A Selfie of Jinxiang" width="200" height="400"/></a>
 
-							<p class = "left">My name is Jinxiang Ma. I am currently a college student at University of Califoria, Santa Barbara, pursuing a dual degree in data science and mathematics.
-								Throughout my time at UCSB, I have gained a strong foundation in mathmatics and have completed a variety of course and projects related to data analysis and machine learning.
-								In my current role as a research assistant at the Social Perception Lab, I have had the research oppotunity to work on projects involving sentiment analysis and have developed skill in natural language processing
+							<p class = "left">My name is Jinxiang Ma. I am a college student at the University of California, Santa Barbara, pursuing a dual degree in data science and mathematics. Throughout my time at UCSB, I have gained a strong foundation in mathematics and completed various courses and projects related to data analysis and machine learning. In my current role as a research assistant at the Social Perception Lab, I have had the research opportunity to work on projects involving sentiment analysis and have developed skills in natural language processing.
 							</p>
 							<p class = "left">
-							   In addition to my coursework and research experience, I am also a student intern at San Francisco Public Utilities Commission, where I have gained heads-on experience working with large datasets from infrastructure projects. 
-							   As I look to the future, I am excited to continue learning and growing as a data science professional and hope to utilize my data science skill to make a positive impact in our society. 
+								In addition to my coursework and research experience, I am a student intern at San Francisco Public Utilities Commission, where I have gained heads-on experience working with large datasets from infrastructure projects. As I look to the future, I am excited to continue learning and growing as a data science professional and utilize my data science skill to make a positive impact in our society. 
 							</p>
 							<p class = "left">
-							   Thank you for visiting my portfolio website. I hope you enjoy exploring my past projects and learning more about my experience and skills. Please don't hasitate to reach out if you have any questions or would like to connect.
+								Thank you for visiting my portfolio website. I hope you enjoy exploring my past projects and learning more about my experience and skills. Please don't hesitate to reach out if you have any questions or want to connect. 
 							</p>
 							<p class = "left">
 							   Best Regards, <br>
@@ -220,7 +217,7 @@
 
 							
 
-							<form method="POST" action="https://formsubmit.co/f6501c53a901c2856cdf09b436229265" enctype="text/plain">
+							<form method="POST" action="https://formsubmit.co/f6501c53a901c2856cdf09b436229265">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
