--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>A snapshot of my previous projects </p>
+							<p>A Collection of My Previous Projects </p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
