--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Jinxiang Ma</h1>
-							<p>Student at UC Santa Barbara</p>
+							<p>Graduate Student at University of Michigan</p>
 						</div>
 
 					<!-- Nav -->
@@ -173,13 +173,16 @@
 
 							<a href="#" class="image left"><img src="images/Jinxiang.jpg" alt="A Selfie of Jinxiang" width="200" height="400"/></a>
 
-							<p class = "left">My name is Jinxiang Ma. I am a college student at the University of California, Santa Barbara, pursuing a dual degree in data science and mathematics. Throughout my time at UCSB, I have gained a strong foundation in mathematics and completed various courses and projects related to data analysis and machine learning. In my current role as a research assistant at the Social Perception Lab, I have had the research opportunity to work on projects involving sentiment analysis and have developed skills in natural language processing.
+							<p class = "left">
+								Hello! I'm Jinxiang, a data-driven and detail-oriented Industrial and Operations Engineering Graduate student at the University of Michigan, Ann Arbor. I am interested in data science, statistical learning, optimization, and operation management. I am passionate about using data to uncover insights that drive strategic decisions and create meaningful impact. With a robust academic background from the University of California, Santa Barbara, I graduated with a dual degree in Statistics and Data Science and Mathematics, where I honed my skills in advanced statistical techniques and mathematical problem-solving.
 							</p>
 							<p class = "left">
-								In addition to my coursework and research experience, I am a student intern at San Francisco Public Utilities Commission, where I have gained heads-on experience working with large datasets from infrastructure projects. As I look to the future, I am excited to continue learning and growing as a data science professional and utilize my data science skill to make a positive impact in our society. 
+								My professional journey includes impactful roles such as an Engineering Design Trainee at the San Francisco Public Utilities Commission, where I optimized budget allocations for critical infrastructure projects and spearheaded the development of a Staff Deliverability Forecasting tool. My expertise was further expanded during my time as a Data Analyst at GoGaucho, where I enhanced a mobile application serving over 10,000 monthly users. Additionally, as a Student Assistant at UCSB's DREAM Lab, I supported multiple research projects through meticulous data preparation and analysis.
 							</p>
 							<p class = "left">
-								Thank you for visiting my portfolio website. I hope you enjoy exploring my past projects and learning more about my experience and skills. Please don't hesitate to reach out if you have any questions or want to connect. 
+								In research, I've embraced challenges that range from developing big data analytics tools at SOCR Lab to sentiment analysis in social media at UCSB's Social Perception Lab. My projects often involve sophisticated data manipulation and predictive modeling, utilizing a variety of programming languages and tools such as Python, R, Matlab, and more.	</p>
+							<p class = "left">
+								Thank you for visiting my portfolio website.  I hope you enjoy exploring my past projects and learning more about my experience and skills. Please don't hesitate to reach out if you have any questions or want to connect. 
 							</p>
 							<p class = "left">
 							   Best Regards, <br>
@@ -216,7 +219,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Thank you for visiting my personal portfolio! I'm always looking for new opportunities to connect and collaborate. If you're interested in working together, or just want to say hello, please don't hesitate to reach out. You can contact me through the form below or via my email address. I'll do my best to get back to you as soon as possible.</p>
+							<p>Thank you for visiting my personal portfolio! I'm always looking for new opportunities to connect and collaborate. If you're interested in working together, or just want to say hello, please don't hesitate to reach out. You can contact me through the form below or via my email address. </p>
 
 							<form method="POST" action="https://formsubmit.co/f6501c53a901c2856cdf09b436229265">
 								<div class="row">
