--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image left"><img src="images/Jinxiang.jpg" alt="A Selfie of Jinxiang" width="200" height="400"/></a>
+							<a href="#" class="image left">
+								<img src="images/Jinxiang.jpg" alt="A Selfie of Jinxiang" style="width:200px; height:400px;" />
+							  </a>
 
 							<p class = "left">
 								Hello! I'm Jinxiang, a data-driven and detail-oriented Industrial and Operations Engineering Graduate student at the University of Michigan, Ann Arbor. I am interested in data science, statistical learning, optimization, and operation management. I am passionate about using data to uncover insights that drive strategic decisions and create meaningful impact. With a robust academic background from the University of California, Santa Barbara, I graduated with a dual degree in Statistics and Data Science and Mathematics, where I honed my skills in advanced statistical techniques and mathematical problem-solving.
