--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Jinxiang Ma</h1>
-							<p>Graduate Student at University of Michigan</p>
+							<p>Student at University of Michigan</p>
 						</div>
 
 					<!-- Nav -->
@@ -171,9 +171,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image left">
-								<img src="images/Jinxiang.jpg" alt="A Selfie of Jinxiang" style="width:300px; height:400px;" />
-							  </a>
+							<a href="#" class="image left"><img src="images/Jinxiang.jpg" alt="A Selfie of Jinxiang" width="250" height="400"/></a>
 
 							<p class = "left">
 								Hello! I'm Jinxiang, a data-driven and detail-oriented Industrial and Operations Engineering Graduate student at the University of Michigan, Ann Arbor. I am interested in data science, statistical learning, optimization, and operation management. I am passionate about using data to uncover insights that drive strategic decisions and create meaningful impact. With a robust academic background from the University of California, Santa Barbara, I graduated with a dual degree in Statistics and Data Science and Mathematics, where I honed my skills in advanced statistical techniques and mathematical problem-solving.
