--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                 </div>
                                 <div class="col-4 col-12-mobile">
                                     <p class="actions">
-										<a href="https://github.com/Jinxiang2000/Resume/blob/main/Resume___Jinxiang_Ma.pdf" class="button icon solid fa-diagram-project">Resume</a>
+										<a href="https://github.com/Jinxiang2000/Resume/blob/main/Resume___Jinxiang_Ma-3.pdf" class="button icon solid fa-diagram-project">Resume</a>
 									</p>
 								</div>
                             </div>
@@ -250,14 +250,14 @@
 						<li>&copy; Jinxiang. All rights reserved.</li><li>
 							
 							<a href="mailto:majinxiang2000@gmail.com?subject= Email from [Your Name]&body=
-								Hi Jinxiang, 
-								my name is [Your Name], and I came across your portfolio and I am interested in your work. I am interested in [           ]. 
+								Hi Jinxiang, \n
+								my name is [Your Name], and I came across your portfolio and I am interested in your work. I am interested in [           ]. \n
 
-								[Share me your story !!! Any feedback on my portfolio are welcomed!!!]
+								[Share me your story !!! Any feedback on my portfolio are welcomed!!!]\n
 
 								
 
-								Best,
+								Best,\n
 
 								[Your Name]">Email</a>
 
